@@ -1,3 +1,5 @@
+1960 [Main Window] initial starting window opens in the visible area taking the taskbar into account. Feature request #2821392
+     [VideoPlayer] taking taskbar into account, too
 1959 [Main Window] disabled maximize button. Feature request #2727670
 1958 [Audio Encoder] encoding job can be added regardless of the input file status
 1957 [Update] added update check for the Nero AAC encoder part II
